2002-06-06  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* inuse.ht (Links): Update Nightsky link.

2002-05-31  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* results.ht (Links): Add testimonial from Stacey A. Ross.

2002-05-28  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* faq.ht: Update link to QAdmin-TMDA.

	* resources.ht (Links): Ditto.

2002-05-23  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* results.ht (Links): Add testimonial from Ed Colmar.

2002-05-21  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* resources.ht (Links): Link to Mate Wierdl's tmda4ezmlm script.
	
2002-05-17  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* resources.ht (Links): Link to Robin Socha's Using Gnus with TMDA
	to reduce UCE HOWTO.
	
2002-05-16  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* faq.ht: Update cygwin entry -- SENDMAIL is not required.

2002-05-13  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* requirements.ht: Now only Sendmail installations require
	procmail.
	
	* config-server.ht: DELIVERY replaces LOCAL_DELIVERY_AGENT.

	* faq.ht: Extend FAQ #1 to include CONFIRM_APPEND info.

2002-05-09  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* config-filter.ht: Update *-ezmlm and *-mailman to show just the
	parent directory as the argument.

2002-05-03  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* install.ht (Links): Clarify that TMDA is meant to be run
	directly from its source tree.

	(tarball): --nodeps has to come after, not before the other
	options on Mandrake.

2002-05-01  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* resources.ht: Link to Andrew Wilson's Mail::Address::Tagged perl
	module.

	* install.ht: Add RPM instructions for systems without a
	/usr/bin/python2.
	
2002-04-29  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* config-client.ht: Update Mutt/VVV-NNTP link.