@@ -9,12 +9,17 @@ latest release</a> as a gzipped tarball.
 <br><br>
 
 <u>Packages:</u><br>
+(<strong>NOTE:</strong> Packages maintained by extraneous parties may not be caught up
+with the latest release)<br>
 <ul>
 <li>Linux RPM: See the <a href="install.html">installation</a> page for how to 
 easily build an RPM directly from the source tarball.<br><br>
 
 <li><a href="http://packages.debian.org/tmda" TARGET="Resource Window">
-Debian Linux Package</a><br><br>
+Debian Linux Package</a> (<strong>NOTE:</strong> Please download the most
+recent TMDA package available; the outdated <i>testing</i> or <i>stable</i> 
+packages are not recommended)
+<br><br>
 
 <li>TMDA is part of <a href="http://www.mandrakelinux.com/" 
 TARGET="Resource Window">Mandrake Linux</a> Contribs<br><br>
@@ -43,10 +48,6 @@ TARGET="Resource Window">(mail/tmda)</a>
 
 </ul>
 </ul>
-
-<strong>NOTE:</strong> Packages maintained by extraneous parties may not be caught up
-with the latest release.
-<br><br>
 
 <u>Old Releases:</u><br>
 <a href="http://software.libertine.org/tmda/releases/old/" TARGET="Resource Window">
