@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Wed May  1 10:57:42 2002 -->
+<!-- Tue Jun 11 12:18:15 2002 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -140,12 +140,17 @@ latest release</a> as a gzipped tarball.
 <br><br>
 
 <u>Packages:</u><br>
+(<strong>NOTE:</strong> Packages maintained by extraneous parties may not be caught up
+with the latest release)<br>
 <ul>
 <li>Linux RPM: See the <a href="install.html">installation</a> page for how to 
 easily build an RPM directly from the source tarball.<br><br>
 
 <li><a href="http://packages.debian.org/tmda" TARGET="Resource Window">
-Debian Linux Package</a><br><br>
+Debian Linux Package</a> (<strong>NOTE:</strong> Please download the most
+recent TMDA package available; the outdated <i>testing</i> or <i>stable</i> 
+packages are not recommended)
+<br><br>
 
 <li>TMDA is part of <a href="http://www.mandrakelinux.com/" 
 TARGET="Resource Window">Mandrake Linux</a> Contribs<br><br>
@@ -174,10 +179,6 @@ TARGET="Resource Window">(mail/tmda)</a>
 
 </ul>
 </ul>
-
-<strong>NOTE:</strong> Packages maintained by extraneous parties may not be caught up
-with the latest release.
-<br><br>
 
 <u>Old Releases:</u><br>
 <a href="http://software.libertine.org/tmda/releases/old/" TARGET="Resource Window">
