@@ -1,3 +1,8 @@
+2002-06-11  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* download.ht (Links): Warn about the outdated "stable" and/or
+	"testing" Debian packages.
+
 2002-06-06  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* inuse.ht (Links): Update Nightsky link.
